<resources>
    <!-- Default string -->
    <string name="app_name">Financial Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Financial Calculator</string>
    <string name="nav_header_subtitle">Version 1.2</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="app_version">Version 1.2</string>
    <string name="made_by">Developed By Felix Husen</string>

    <!-- Text for calculate button -->
    <string name="calculate_button">Calculate</string>

    <!-- String for navigation drawer -->
    <string name="nav_property_cashflow">Property Cashflow</string>
    <string name="nav_saved_calculation">Saved Calculation</string>
    <string name="nav_comp_interest">Compound Interest</string>
    <string name="nav_pres_value">Present Value</string>
    <string name="nav_return_rate">Return Rate</string>
    <string name="nav_annuity">Annuity</string>
    <string name="nav_pres_value_of_annuity">Present Value of Annuity</string>
    <string name="nav_bond_yield">Bond Yield</string>
    <string name="nav_mortgage">Mortgage</string>
    <string name="nav_retirement">Retirement</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <!-- String for navigation drawer group title -->
    <string name="navg_saved_calculation">Saved Calculation</string>
    <string name="navg_calculator">Calculator</string>
    <string name="navg_more">More</string>

    <!-- String for global calculation -->
    <string name="beginning_year">Start of each year</string>
    <string name="end_year">End of each year</string>

    <!-- String for Annuity Fragment -->
    <string name="starting_principal">Starting Principal:</string>
    <string name="growth_rate">Growth Rate:</string>
    <string name="years_pay_out">Years to Pay Out:</string>
    <string name="payout_at">Make Payouts at the:</string>
    <string name="annual_payout">Annual Payout:</string>

    <!-- String for CompoundInterest Fragment -->
    <string name="current_principal">Current Principal:</string>
    <string name="annual_addition">Annual Addition:</string>
    <string name="years_to_grow">Years to Grow:</string>

    <string name="pre_growth_rate">Pre Growth Rate:</string>
    <string name="in_growth_rate">In Growth Rate:</string>
    <string name="pre_retirement">Pre-Retirement</string>
    <string name="in_retirement">In-Retirement</string>
    <string name="annual_retirement_income">Annual Retirement Income:</string>
    <string name="pre_annual_addition">Pre-Annual Addition:</string>

    <string name="interest_rate">Interest Rate:</string>
    <string name="interest_time">Compound Interest ... Times Annually:</string>
    <string name="annually">Annually</string>
    <string name="monthly">Monthly</string>
    <string name="custom_time">Custom</string>
    <string name="make_addition_at">Make Addition at:</string>

    <!-- String for PresentValueFragment & Return Rate -->
    <string name="future_value">Future Value:</string>
    <string name="years">Years:</string>
    <string name="discount_rate">Discount Rate:</string>
    <string name="present_value">Present Value:</string>
    <string name="return_rate">Return Rate:</string>

    <!-- String for bond yield fragment -->
    <string name="current_price">Current Price:</string>
    <string name="per_value">Per Value:</string>
    <string name="coupon_rate">Coupon Rate:</string>
    <string name="years_to_maturity">Years to Maturity:</string>
    <string name="current_yield">Current Yield:</string>
    <string name="yield_to_maturity">Yield to Maturity:</string>

    <!-- String for Mortgage -->
    <string name="loan_amount">Loan Amount:</string>
    <string name="mortgage_rate">Mortgage Rate:</string>
    <string name="years_to_pay">Years to Pay:</string>
    <string name="monthly_payment">Monthly Payment:</string>
    <string name="one_year">One Year</string>
    <string name="n_year">... Years</string>
    <string name="fields_validation_failed">All Fields are required!</string>
    <string name="year_limit">Year must be below 100</string>

    <!-- String for table -->
    <string name="table_view">Table View</string>
    <string name="diagram_view">Diagram View</string>
    <string name="result_view">Result</string>

    <!-- String for no item -->
    <string name="no_item">Nothing in here</string>

</resources>
