<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.ffx.fcalculator.fragments.MortgageFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/row_margin_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loan_amount"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="true"
                android:textSize="@dimen/text3"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/text_vertical_margin" />
            <EditText style="@style/BCCurrencyEditText"
                android:id="@+id/mortgage_loan_amount"
                android:background="@drawable/bg_edittext_currency"
                android:layout_width="match_parent"
                android:hint="0"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mortgage_rate"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="true"
                android:textSize="@dimen/text3"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/text_vertical_margin" />
            <EditText style="@style/BCPercentEditText"
                android:id="@+id/mortgage_rate"
                android:background="@drawable/bg_edittext_currency"
                android:layout_width="match_parent"
                android:hint="0"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/years_to_pay"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="true"
                android:textSize="@dimen/text3"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/text_vertical_margin" />
            <RadioGroup
                android:id="@+id/mortgage_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/one_year"
                android:layout_marginBottom="@dimen/text_vertical_margin">
                <RadioButton
                    android:id="@+id/one_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/one_year"
                    android:textAllCaps="true"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text3"
                    android:textStyle="bold"/>
                <RadioButton
                    android:id="@+id/n_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/n_year"
                    android:textAllCaps="true"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text3"
                    android:textStyle="bold"/>
            </RadioGroup>

            <EditText style="@style/BCYearsEditText"
                android:id="@+id/mortgage_years"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="0"
                android:visibility="gone" />
            <Button
                android:id="@+id/mortgage_calculate_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate_button"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="@dimen/text3"
                android:layout_marginBottom="@dimen/text_vertical_margin"
                android:textColor="@android:color/white"
                android:background="@drawable/bg_calculate_button"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>