<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    tools:context="com.ffx.fcalculator.activities.AboutActivity">
        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/text_vertical_margin"
                android:layout_marginBottom="@dimen/text_vertical_margin"
                android:src="@drawable/ic_no_item"/>
            <TextView
                android:layout_margin="@dimen/text_vertical_margin"
                android:textSize="@dimen/text2"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"/>
            <TextView
                android:textSize="@dimen/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:layout_marginBottom="@dimen/text_vertical_margin"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:layout_gravity="center"/>
            <TextView
                android:textSize="@dimen/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/made_by"
                android:padding="@dimen/text_vertical_margin"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:layout_gravity="center"/>

        </LinearLayout>
</LinearLayout>