<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.ffx.fcalculator.fragments.AnnuityFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/row_margin_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/starting_principal"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="true"
                android:textSize="@dimen/text3"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/text_vertical_margin" />
            <EditText style="@style/BCCurrencyEditText"
                android:id="@+id/annuity_starting_principal"
                android:background="@drawable/bg_edittext_currency"
                android:layout_width="match_parent"
                android:hint="0"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/growth_rate"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="true"
                android:textSize="@dimen/text3"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/text_vertical_margin" />
            <EditText style="@style/BCPercentEditText"
                android:id="@+id/annuity_growth_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="0" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/years_pay_out"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="true"
                android:textSize="@dimen/text3"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/text_vertical_margin" />
            <EditText style="@style/BCYearsEditText"
                android:id="@+id/annuity_years_pay_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="0" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payout_at"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="true"
                android:textSize="@dimen/text3"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/text_vertical_margin" />

            <com.savvyapps.togglebuttonlayout.ToggleButtonLayout
                android:id="@+id/an_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                app:customLayout="@layout/toggle_pc"
                app:toggleMode="even"
                app:allowDeselection="false"
                app:menu="@menu/cp_toggle"
                app:selectedColor="?attr/colorPrimary" />
            <Button style="@style/BCButton"
                android:id="@+id/annuity_calculate_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>